--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Skanda P N</h1>
+      <h1>Chandan M</h1>
       <p>I'm <span class="typed" data-typed-items="Designer, Developer,"></span></p>
       <div class="social-links">
         <a href="https://github.com/Chandan9610?tab=repositories" class="google-plus" target="_blank"><i
