--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Chandan Resume</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">>
+  <meta content="" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -430,7 +430,7 @@
         <a href="https://www.linkedin.com/in/chandan-m-a796881b8/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>2023</span></strong>
       </div>
       <div class="credits">
         Designed by <a href="#">Chandan M</a>
