--- a/index.html
+++ b/index.html
@@ -298,14 +298,6 @@
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box iconbox-buel">
-
-              <h4><a href="https://scpdevelopers.in/" target="_blank">Real estate website</a></h4>
-              <p><b>Tech stack :</b> HTML, CSS, Bootstrap, Javascript</p>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
             data-aos-delay="200">
             <div class="icon-box iconbox-buel">
@@ -323,12 +315,29 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box iconbox-buel">
+
+              <h4><a href="https://scpdevelopers.in/" target="_blank">Real estate website</a></h4>
+              <p><b>Tech stack :</b> HTML, CSS, Bootstrap, Javascript</p>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-buel">
 
-              <h4><a href="https://github.com/Chandan9610/Ecommerce_shoes_shop" target="_blank">Shoes Shop-Ecommerce Web
+              <h4><a href="https://web-production-91ae.up.railway.app/" target="_blank">Shoes Shop-Ecommerce Web
                   Application</a></h4>
-              <p><b>Tech stack :</b> Python, Django Framework, SQL, HTML, CSS, Bootstrap, Javascript</p>
+              <p><b>Tech stack :</b> Python, Django Framework, SQL, PostgreSQL, HTML, CSS, Bootstrap, Javascript</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box iconbox-buel">
+
+              <h4><a href="https://collegerecord-production.up.railway.app/" target="_blank">School/Collage Record 
+                Management</a></h4>
+              <p><b>Tech stack :</b> Python, Django Framework, SQL, PostgreSQL, HTML, CSS, Bootstrap, Javascript</p>
             </div>
           </div>
 
@@ -340,9 +349,6 @@
               <p><b>Tech stack :</b> Python, Django Framework, SQL, HTML, CSS, Bootstrap</p>
             </div>
           </div>
-
-
-
         </div>
 
       </div>
@@ -433,7 +439,7 @@
         &copy; Copyright <strong><span>2023</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="#">Chandan M</a>
+        Designed by <a href="https://chandan9610.github.io/Resume/">Chandan M</a>
       </div>
     </div>
   </footer><!-- End Footer -->
