--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
               <h4><a href="https://web-production-91ae.up.railway.app/" target="_blank">Shoes Shop-Ecommerce Web
                   Application</a></h4>
-              <p><b>Tech stack :</b> Python, Django Framework, SQL, PostgreSQL, RestApi, HTML, CSS, Bootstrap, Javascript</p>
+              <p><b>Tech stack :</b> Python, Django Framework, SQL, PostgreSQL, RestAPI, HTML, CSS, Bootstrap, Javascript</p>
             </div>
           </div>
 
